# litecard-sdk

./: .gitignore  README.md  pyproject.toml  verify_alignment.py
litecard/: __init__.py  client.py  exceptions.py  request_types.py  throttler.py  utils.py
litecard/models/: __init__.py  aggregated_billing_statistics.py  aggregated_notifications_statistics.py  aggregated_scans_statistics.py  aggregated_scans_statistics_templates_item.py  aggregated_scans_statistics_templates_item_additional_property.py  analytics_billing_results_schema.py  analytics_billing_results_schema_results.py  analytics_billing_results_schema_results_query_parameters.py  analytics_notifications_results_schema.py  analytics_notifications_results_schema_results.py  analytics_notifications_results_schema_results_query_parameters.py  analytics_scans_results_schema.py  analytics_scans_results_schema_results.py  analytics_scans_results_schema_results_query_parameters.py  apple_app_linking_settings.py  apple_date_time_style_v1.py  apple_number_style_v1.py  authenticate_x_user_tenant.py  authentication_request_body.py  authentication_response.py  base_card_payload.py  base_template_v1.py  base_template_v1_tiers.py  base_template_v1_type.py  business.py  business_card_options.py  business_card_request_body.py  business_card_response_200.py  business_mailchimp.py  cancel_notifications_by_group_id_v1_response_200.py  card.py  card_card_owner_copy.py  card_data_fields.py  card_mapping_payload.py  card_owner.py  card_owner_request_body.py  card_owners_scan_request_body.py  card_status.py  card_upload_group_v1.py  (+350 more)
litecard/models_/: __init__.py  all_models.py
litecard/resources/: __init__.py  authentication.py  backlink.py  base.py  business.py  card.py  card_owner.py  card_upload.py  certificate.py  download.py  export.py  form.py  notification.py  notification_group.py  pass_.py  scan.py  schedule.py  sub_business.py  template.py  user.py  voucher_code.py  webhook.py
tests/: test_api_documentation_alignment.py  test_basic.py
