[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litecard-sdk"
version = "0.1.0"
description = "Python SDK for Litecard API integration"
authors = [
    {name = "Benjamin Herro", email = "benjamincsherro@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0.0",
    "leaky-bucket-py>=0.1.3,<0.2.0",
    "pydantic>=2.11.7,<3.0.0",
    "httpx>=0.28.1,<0.29.0"
]
keywords = ["litecard", "api", "sdk", "payment", "cards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DuneRaccoon/litecard-sdk"
Repository = "https://github.com/DuneRaccoon/litecard-sdk"
"Bug Reports" = "https://github.com/DuneRaccoon/litecard-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["litecard*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
